--- a/lesson02/composer.json
+++ b/lesson02/composer.json
@@ -1,14 +1,16 @@
 {
     "name": "geekhub/lesson02",
-    "require": {
-        "brick/math": "^0.5.2",
-        "symfony/yaml": "^2.7",
-        "symfony/filesystem": "^2.7"
-    },
     "authors": [
         {
             "name": "Alexey Kozeka",
             "email": "kozeka.alex@gmail.com"
         }
-    ]
+    ],
+    "require": {
+        "php": ">=5.6",
+        "ext-bcmath": "*",
+        "brick/math": "^0.5.2",
+        "symfony/yaml": "^2.7",
+        "symfony/filesystem": "^2.7"
+    }
 }
